              within a triangulation.
        Class NLayeredSolidTorus:
            - New routine formsLayeredSolidTorusTop() for finding an LST
              from the top end instead of the bottom.
        Class NLayeredTorusBundle, NTxICore, NTxIDiagonalCore, NTxIParallelCore:
            - Added for recognition of layered surface bundles.
        Class NManifold:
            - Routine writeTeXName() no longer provides wrapping dollar signs.
        Class NMatrix2:
            - New specialised class for working with 2x2 integer matrices.
        Class NPerm:
            - The assignment operator now returns a reference instead of void.
        Class NPluggedIBundle, NPluggedIBundleCore, NTorusPlug:
            - Added for recognition of small closed non-orientable
              3-manifolds.
        Class NSatAnnulus, NSatBlock, NSatBlockInstance and subclasses:
            - New classes for describing Seifert fibred spaces built from
              saturated blocks.
        Class NSFS, NSFSpace, NExceptionalFibre, NSFSFibre:
            - Complete overhaul of the Seifert fibred space classes.
              Now more general, supporting both orientable and
              non-orientable 3-manifolds as well as base orbifolds with
              reflector boundary components.
        Class NStandardTri:
            - Routine writeTeXName() no longer provides wrapping dollar signs.
        Class NTorusBundle:
            - New class of 3-manifolds.
        Class NTriangulation:
            - Combined isomorphism and subcomplex testing routines into
              a single all-in-one routine to avoid excessive code reuse.
            - New routine findAllSubcomplexesIn() for subcomplex testing
              in which all matches (not just the first) should be returned.
            - Routines getTetrahedronIndex(), getComponentIndex(),
              getBoundaryComponentIndex(), getFaceIndex(), getEdgeIndex()